Edited Methods to return expected output